...

    <!-- Activity and fragment titles -->
    <string name="provider_authority" translatable="false">de.danoeh.antennapod.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="statistics_label">Statistics</string>
    <string name="statistics_label_short">Stats</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="add_feed_label_short">Add</string>
    <string name="episodes_label">Episodes</string>
    <string name="episodes_label_short">Episodes</string>
    <string name="home_label">Home</string>
    <string name="home_label_short">Home</string>
    <string name="queue_label">Queue</string>
    <string name="queue_label_short">Queue</string>
    <string name="inbox_label">Inbox</string>
    <string name="inbox_label_short">Inbox</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="favorite_episodes_label_short">Favorites</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="downloads_label_short">Downloads</string>
    <string name="downloads_log_label">Download log</string>
    <string name="subscriptions_label">Podcasts</string> <!-- SHUFFLEPOD: was Subscriptions -->
    <string name="subscriptions_label_short">Podcasts</string> <!-- SHUFFLEPOD: was Subscriptions -->
    <string name="subscriptions_list_label">Subscriptions list</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">Playback history</string>
    <string name="playback_history_label_short">History</string>
    <string name="years_statistics_label">Years</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="current_playing_episode">Current</string>

    <!-- Google Assistant -->
...
    </plurals>
    <plurals name="shufflepod_mark_older_played_confirm">
        <item quantity="one">Mark %1$d episode of %2$s published before this one as played?</item>
        <item quantity="other">Mark %1$d episodes of %2$s published before this one as played?</item>
    </plurals>
    <string name="shufflepod_now_playing_label">Now Playing</string>
    <string name="shufflepod_now_playing_label_short">Playing</string>
    <string name="shufflepod_entertainment_label">Entertainment</string>
    <string name="shufflepod_entertainment_label_short">Entertainment</string>
    <string name="shufflepod_entertainment_intro">When the queue runs out, the oldest unplayed episode of a random show or person from the pool plays next. Untick to remove; tap + to add.</string>
    <plurals name="shufflepod_entertainment_pool_size">
        <item quantity="one">%d show in the pool</item>
        <item quantity="other">%d shows in the pool</item>
    </plurals>
    <plurals name="shufflepod_entertainment_episodes_left">
...
    </plurals>
    <string name="shufflepod_forced_none">%s has no more episodes to add.</string>
    <string name="shufflepod_forced_section">Playing next</string>
    <string name="shufflepod_shows_section">Shows</string>
    <string name="shufflepod_forced_remove">Remove</string>
    <string name="shufflepod_panel_forced">Next: %s</string>
    <string name="shufflepod_people_label">People</string>
    <string name="shufflepod_people_label_short">People</string>
    <string name="shufflepod_people_empty_title">Not following anyone yet</string>
    <string name="shufflepod_people_empty_message">Follow guests and hosts to collect their appearances across podcasts.</string>
    <string name="shufflepod_add_person_label">Follow a person</string>
    <string name="shufflepod_edit_person_label">Edit names</string>
    <string name="shufflepod_person_name_hint">Name</string>
    <string name="shufflepod_person_aliases_hint">Other spellings (comma separated, optional)</string>
...
    <string name="shufflepod_people_section">People</string>
    <string name="shufflepod_queue_position_title">Position in queue</string>
    <string name="shufflepod_queue_position_bottom">Bottom of the queue</string>
    <string name="shufflepod_queue_position_top">Top of the queue</string>
    <string name="shufflepod_queue_position_bottom_summary">New episodes are added to the end of the queue</string>
    <string name="shufflepod_queue_position_top_summary">New episodes go to the top of the queue, after the episode that is playing and after this show\'s other queued episodes</string>
    <string name="shufflepod_news_label">News</string>
    <string name="shufflepod_news_label_short">News</string>
    <string name="shufflepod_news_intro">New episodes of these shows go to the queue (top or bottom, set per show). Other shows just collect episodes. Untick to remove; tap + to add.</string>
    <string name="shufflepod_news_empty">No News shows yet. Tap + to add some.</string>
    <string name="shufflepod_entertainment_empty">The Entertainment pool is empty. Tap + to add shows.</string>
    <string name="shufflepod_add_shows_label">Add shows</string>
    <string name="shufflepod_add_to_news_title">Add to News</string>
    <string name="shufflepod_add_to_entertainment_title">Add to Entertainment</string>
...
