...
            <!--
                Warning: android:contentDescription is set to an empty string.
                The title is read as contentDescription of left_padding to have it read first.
                Keep this in mind when changing the order of this layout!
            -->
            <TextView
                android:id="@+id/txtvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:ellipsize="end"
                android:textAlignment="viewStart"
                style="@style/AntennaPod.TextView.FeedListItemPrimaryTitle"
...
